Add requests example

--- a/examples/basic/about.html
+++ b/examples/basic/about.html
@@ -24,5 +24,11 @@
   </nav>
   <h1>About this basic example</h1>
   <p>This example is designed</p>
+  <script>
+    setTimeout(() => {
+      var h1 = document.querySelector('h1');
+      h1.textContent = 'JavaScript Took Over!';
+    }, 1000);
+  </script>
 </body>
 </html>
